--- a/src/views/HomePage/index.module.css
+++ b/src/views/HomePage/index.module.css
@@ -1,5 +1,7 @@
 body {
   background-image: url('../../assets/images/background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .home-body {
