--- a/src/views/ResultPage/index.module.css
+++ b/src/views/ResultPage/index.module.css
@@ -9,6 +9,7 @@
   height: 85vh;
   width: 80%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: white;
