--- a/src/views/ResultPage/index.module.css
+++ b/src/views/ResultPage/index.module.css
@@ -6,21 +6,17 @@
 }
 
 .result-image-box {
-  height: 85vh;
-  width: 80%;
+  height: 70vh;
+  width: 70%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: white;
   border-radius: 25px;
   border-color: rgba(155, 11, 11, 0.2);
 }
 
 .image {
-  height: 90%;
-  max-height: 90%;
-  max-width: 90%;
+  height: 100%;
 }
 
 .middle {
@@ -28,7 +24,7 @@
   opacity: 0;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 66%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
@@ -45,4 +41,13 @@
 .result-image-box:hover .middle {
   opacity: 1;
   cursor: pointer;
+}
+
+.image-viewer{
+  display: flex;
+  flex-direction: row;
+}
+
+.result-image{
+  padding-left: 90px;
 }
